# hiroba

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  turbo.json  wrangler.jsonc  wrangler.toml
.claude/: settings.local.json
apps/admin/: astro.config.mjs  package.json  wrangler.jsonc
apps/admin/public/styles/: admin.css
apps/admin/src/: env.d.ts
apps/admin/src/components/: Dashboard.tsx  GlossaryImport.tsx  GlossaryList.tsx  GlossaryLookup.tsx  NewsList.tsx  RecheckQueue.tsx
apps/admin/src/layouts/: Layout.astro
apps/admin/src/lib/: api.ts  db-operations.ts  scraper.ts
apps/admin/src/pages/: index.astro  recheck-queue.astro
apps/admin/src/pages/api/: recheck-queue.ts  scrape.ts  stats.ts
apps/admin/src/pages/glossary/: import.astro  index.astro  lookup.astro
apps/api/: drizzle.config.ts  eslint.config.mjs  package.json  prettierrc.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
apps/api/migrations/: 0001_init.sql
apps/api/src/: cache.ts  glossary.ts  index.ts  legacy-schema.ts  scraper.ts  translator.ts  types.ts
apps/api/src/db/: schema.ts
apps/api/src/lib/: ai-translator.ts  body-fetcher.ts  body-scraper.spec.ts  body-scraper.ts  glossary-fetcher.ts  list-scraper.ts  news-repository.ts  pubsub.ts
apps/api/src/routes/: admin.ts  news.ts
apps/api/test/: api.test.ts  cache.test.ts  glossary.test.ts  scraper.test.ts
apps/api/test/fixtures/: news-detail-sample.html  news-listing-category-0.html
apps/cron/: .env.example  package.json  tsconfig.json  wrangler.toml
apps/cron/migrations/: 0003_drop_source_updated_at.sql
apps/cron/src/: index.ts
apps/web/: astro.config.mjs  package.json  wrangler.jsonc
apps/web/public/styles/: global.css
apps/web/src/: env.d.ts  middleware.ts
apps/web/src/layouts/: Layout.astro
apps/web/src/lib/: api.ts
apps/web/src/pages/: index.astro
apps/web/src/types/: do.ts
apps/workflow/: package.json  wrangler.toml
apps/workflow/migrations/: 0002_drop_list_checked_at.sql  0005_create_events.sql  0006_field_based_translations.sql  0008_schema_overhaul.sql
apps/workflow/src/: index.ts  news-workflow.ts  types.ts
banner/: clean_bounding_boxes.py  extract_poly_from_image.py  get_font.py  get_font_analogue.py  get_slides.py  get_text_style.py  google_ocr.py  inpaint.py  translate_image.py  translate_text_with_context.py
migrations/20260109092147_crazy_hulk/: migration.sql  snapshot.json
plans/: README.md  phase-1-monorepo-foundation.md  phase-2-database-schema.md  phase-3-shared-package.md  phase-4-api-core.md  phase-5-body-translation.md  phase-6-admin-cron.md  phase-7-web-frontend.md  phase-8-admin-panel.md  phase-9-deployment.md
src/: __init__.py
src/banner/: font.py  inpaint.py  models.py  ocr.py  pipeline.py  text_style.py  translator.py
src/dqx_news/: api.py  cache.py  scraper.py  translator.py  worker.py
tests/: __init__.py  conftest.py  test_api.py  test_banner_bounding_boxes.py  test_banner_font.py  test_banner_models.py  test_banner_renderer.py  test_banner_slides.py  test_banner_text_style.py  test_cache.py  test_scraper.py  test_translator.py
workers/banner/: package-lock.json  package.json  pyproject.toml  worker.py  wrangler.jsonc  wrangler.toml
workers/banner/src/: __init__.py  api.ts  bounding-boxes.ts  font.ts  image-utils.ts  index.ts  inpaint.ts  ocr.ts  pipeline.ts  renderer.ts  slides.ts  text-style.ts  translator.ts  types.ts
workers/banner/src/banner/: __init__.py  bounding_boxes.py  image_utils.py  inpaint.py  pipeline.py  renderer.py  slides.py  text_style.py
workers/banner/test/: bounding-boxes.test.ts  renderer.test.ts  text-style.test.ts  types.test.ts
workers/news/: package-lock.json  package.json  pyproject.toml  tsconfig.json  worker.py  wrangler.jsonc  wrangler.toml
workers/news/src/: __init__.py  api.ts  cache.ts  glossary.ts  index.ts  scraper.ts  translator.ts  types.ts  worker.py
workers/news/src/dqx_news/: __init__.py  api.py  cache.py  translator.py
workers/news/test/: translator.test.ts
workers/news/test/fixtures/: news-listing-category-1.html
(+18 files in other folders)
