[project]
name = "barohi.sc"
version = "0.1.0"
description = "DQX News translation API - Extract and translate Dragon Quest X news"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "google-cloud-vision>=3.10.1",
    "httpx>=0.28.1",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "openai>=1.66.5",
    "opencv-python>=4.11.0.86",
    "pillow>=11.1.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.6.1",
    "shapely>=2.0.7",
    "textdistance>=4.6.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "ty>=0.0.1a7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
