[project]
name = "dqx-tools--news"
version = "1.0.0"
description = "DQX News translation API - Extract and translate Dragon Quest X news"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
]
